--- a/todo-frontend/src/App.css
+++ b/todo-frontend/src/App.css
@@ -4,11 +4,13 @@
   padding: 0;
 }
 body{
-  min-width: 100vw;
-  min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+#root{
+  height: 100vh;
+  width: 100vw;
 }
 .form {
   background-color: #fff;
