--- a/todo-frontend/src/App.css
+++ b/todo-frontend/src/App.css
@@ -45,7 +45,7 @@ body{
   padding-right: 3rem;
   font-size: 0.875rem;
   line-height: 1.25rem;
-  width: 300px;
+  width: 100%;
   border-radius: 0.5rem;
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
 }
