--- a/todo-frontend/src/App.css
+++ b/todo-frontend/src/App.css
@@ -19,7 +19,9 @@ body{
   max-width: 450px;
   border-radius: 0.5rem;
   box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+  align-self: center;
 }
+
 
 .form-title {
   font-size: 1.25rem;
